Afegit comentari amb el meu nom

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>ModaGlobal</title>
   <link rel="stylesheet" href="style.css">
 </head>
+<!-- Carolina Lopez Casanova -->
 <body>
   <h1>Benvinguts a ModaGlobal</h1>
-
   <script src="script.js"></script>
 </body>
 </html>
